# epstein_api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  TASKS.md  docker-compose.override.example.yml  docker-compose.yml  doctor.sh  knowledge_base.md  launch.sh  orchestrate.py  requirements.txt  tasks.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml  issues.yml  stale.yml
app/: .dockerignore  Dockerfile  Dockerfile.worker  config.yaml  pyproject.toml
app/agents/: cli.py  fact_extractor.py  mcp_tools.py  model_router.py  orchestrator.py  orchestrator_cli.py  roles.py
app/agents/tools/: __init__.py  debug_tools.py  docker_tools.py  download_tools.py  script_tools.py  system_tools.py
app/api/: __init__.py  ingest.py  main.py
app/core/: container.py  downloader.py  logger.py  settings.py
app/core/databases/: chunker.py  neo4j_client.py  vector_ingestor.py
app/core/processing/: extractors.py
app/migrations/: migrations.py
app/scripts/: generate_epstein_urls.py  preflight_calibration.py
app/services/: state_db.py
app/workers/: celery_app.py  db.py  tasks.py
backend/: .dockerignore  Dockerfile  Dockerfile.worker  config.yaml  log_launch.py  pyproject.toml
backend/agents/: fact_extractor.py  mcp_tools.py  model_router.py  telemetry.py
backend/api/: ingest.py  main.py  process.py
backend/core/: container.py  downloader.py  exceptions.py  interfaces.py  logger.py  openrouter_fetcher.py  schemas.py  settings.py
backend/core/databases/: __init__.py  chroma_client.py  neo4j_client.py
backend/migrations/: migrations.py
backend/models/: entities.py
backend/scripts/: generate_report.py  preflight_calibration.py
backend/services/: downloader.py  graph_db.py  state_db.py  vector_db.py
backend/workers/: tasks.py
data/: state.db
docs/: CODEBASE_REVIEW.md  agents.md  api.md  architecture.md  deployment.md  methodology.md  rules.md  usage.md
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json
frontend/e2e/: funnel.spec.ts
tests/: conftest.py  pytest.ini  test_agents.py  test_ai_alignment.py  test_chunker.py  test_databases.py  test_downloader.py  test_exceptions.py  test_migrations.py  test_pipeline_smoke.py  test_processing.py  test_router.py  test_schemas.py
(+13 files in other folders)
